--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Grupo 2 - Sanduíches Artesanais</title>
+    <title>ABC - Sanduíches Artesanais</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -42,7 +42,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">GRUPO 2</a>
+                <a class="navbar-brand" href="#page-top">ABC Vendas LTDA</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -77,7 +77,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" width="250px" src="img/sand.png" alt="">
                     <div class="intro-text">
-                        <h1 class="name">GRUPO 2</h1>
+                        <h1 class="name">ABC Vendas LTDA</h1>
                         <hr class="star-light">
                         <span class="skills">Os melhores Sanduíches Artesanais que você respeita!</span>
                     </div>
@@ -172,10 +172,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Nossa historia começou em 1986 quando a primeira loja GRUPO 2 de Sanduíches Artesanais foi aberta em Rio Paranaiba, e hoje podemos contar com a experiência e o orgulho de levar o melhor do sabor Artesanal para todo o Brasil.</p>
+                    <p>Nossa historia começou em 1986 quando a primeira loja ABC Vendas LTDA de Sanduíches Artesanais foi aberta em Rio Paranaiba, e hoje podemos contar com a experiência e o orgulho de levar o melhor do sabor Artesanal para todo o Brasil.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Conheça os nossos produtos e comprove que não há nada igual ao sabor do verdadeiro Sanduíche Artesanal do GRUPO2</p>
+                    <p>Conheça os nossos produtos e comprove que não há nada igual ao sabor do verdadeiro Sanduíche Artesanal que oferecemos.</p>
                 </div>
             </div>
         </div>
@@ -313,7 +313,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Sanduíches Artesanais 2017
+                        Copyright &copy; ABC Vendas LTDA - Sanduíches Artesanais 2017
                     </div>
                 </div>
             </div>
